[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/MagicPowerup.gd" type="Script" id=1]
[ext_resource path="res://assets/img/particle/sparkle1.png" type="Texture" id=2]

[sub_resource type="Curve" id=2]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, -19.6364 ), 0.0, 0.0, 0, 0, Vector2( 0.831522, -26.1818 ), 0.0, 0.0, 0, 0, Vector2( 1, -48.2727 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="Gradient" id=12]
offsets = PoolRealArray( 0, 0.130435, 0.73913, 1 )
colors = PoolColorArray( 0.752941, 0.752941, 0.752941, 0.192157, 0.828835, 0.828835, 0.828835, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=13]
gradient = SubResource( 12 )

[sub_resource type="Curve" id=15]
min_value = -1.0
_data = [ Vector2( 0, 0.0500001 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.286364 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=16]
curve = SubResource( 15 )

[sub_resource type="Curve" id=14]
max_value = 3.0
_data = [ Vector2( 0, 0.504545 ), 0.0, 0.0, 0, 0, Vector2( 0.733696, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1.39773 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 14 )

[sub_resource type="ParticlesMaterial" id=8]
flag_disable_z = true
spread = 0.8
gravity = Vector3( 0, 0, 0 )
initial_velocity = 65.0
initial_velocity_random = 0.2
angular_velocity = 1.0
angular_velocity_curve = SubResource( 3 )
orbit_velocity = 0.6
orbit_velocity_random = 0.34
angle = 381.2
angle_random = 1.0
scale_curve = SubResource( 7 )
color_ramp = SubResource( 13 )
hue_variation = 0.06
hue_variation_random = 0.7
hue_variation_curve = SubResource( 16 )

[sub_resource type="CircleShape2D" id=9]
radius = 30.0

[sub_resource type="Animation" id=10]
resource_name = "HideParticles"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Particles2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 12 )

[sub_resource type="ParticlesMaterial" id=11]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 160.0
initial_velocity_random = 0.2
angular_velocity = 1.0
angular_velocity_curve = SubResource( 3 )
orbit_velocity = 0.05
orbit_velocity_random = 0.34
damping = 100.0
angle = 381.2
angle_random = 1.0
scale_curve = SubResource( 7 )
color_ramp = SubResource( 5 )
hue_variation = 0.06
hue_variation_random = 0.7

[node name="MagicPowerup" type="Node2D"]
script = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 0, 16 )
amount = 22
lifetime = 5.0
preprocess = 0.3
explosiveness = 0.3
randomness = 0.35
process_material = SubResource( 8 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/HideParticles = SubResource( 10 )

[node name="Explood" type="Particles2D" parent="."]
material = SubResource( 1 )
position = Vector2( 0, 16 )
emitting = false
amount = 45
lifetime = 0.8
one_shot = true
explosiveness = 0.8
randomness = 0.35
local_coords = false
process_material = SubResource( 11 )
texture = ExtResource( 2 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 1.1
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
